# My-POrt

./: 404.html  PORTFOLIO_BLUEPRINT.md  WEBSITE_SPEC.md  app.js  contact.html  data.js  index.html  proof.html  robots.txt  sitemap.xml  styles.css  work.html  writing.html
assets/: .gitkeep  resume.html
blog/posts/: eval-suites-ci-gates.md  security-failures-llm-apps.md  why-offline-metrics-lie.md
fraudshield/: Dockerfile  README.md  requirements.txt
fraudshield/data/: .gitkeep
projects/fraudshield/: README.md  pyproject.toml
projects/fraudshield/artifacts/models/: feature_pipeline.pkl  xgboost_model.model
projects/fraudshield/artifacts/reports/: evaluation_report_20251222_104849.yaml
projects/fraudshield/configs/: config.yaml
projects/fraudshield/data/: ground_truth.parquet  labels.parquet  transactions.parquet
projects/fraudshield/docs/: DRIFT_RUNBOOK.md  INCIDENT_POSTMORTEM.md  MODEL_CARD.md  cost_report.md  eval_report.md
projects/fraudshield/fraudshield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
projects/fraudshield/scripts/: benchmark.py  ci_checks.py  evaluate.py  generate_data.py  serve.py  train.py
projects/fraudshield/src/: __init__.py
projects/fraudshield/src/data/: __init__.py  contracts.py  loader.py  schemas.py
projects/fraudshield/src/evaluation/: __init__.py  cost.py  metrics.py  report.py  stress_tests.py
projects/fraudshield/src/features/: __init__.py  aggregations.py  embeddings.py  pipeline.py  transformers.py
projects/fraudshield/src/models/: __init__.py  predictor.py  trainer.py
projects/fraudshield/src/monitoring/: __init__.py  alerts.py  drift.py  reconciler.py  retrain_trigger.py
projects/fraudshield/src/rules/: __init__.py  engine.py
projects/fraudshield/src/serving/: __init__.py  app.py
projects/fraudshield/src/streaming/: __init__.py  feature_store.py  kafka_consumer.py
projects/fraudshield/tests/: conftest.py
projects/fraudshield/tests/integration/: test_pipeline.py
projects/fraudshield/tests/ml_regression/: test_model.py
projects/fraudshield/tests/unit/: test_data.py  test_evaluation.py  test_explainability.py  test_features.py  test_monitoring.py  test_rules.py
securerag/: README.md  requirements.txt
work/: fraudshield.html  securerag.html  shiftbench.html
(+53 files in other folders)
